infrastructure/kubernetes/deployments/searx/app/searx-ingress.yaml
#test
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: searx-ingress
  namespace: searxng
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd, searxng-searx-in-flight-limit@kubernetescrd
    external-dns.alpha.kubernetes.io/hostname: searchy.thekitty.zone
spec:
  rules:
    - host: search.thekitty.zone
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: searxng
                port:
                  number: 8080
  tls:
    - secretName: searx-tls
      hosts:
        - search.thekitty.zone
